--- a/README
+++ b/README
@@ -2,3 +2,20 @@ In order to use the "MagicaSharpClient" you should install the XNA 3.1 framework
 http://www.microsoft.com/download/en/details.aspx?id=39 (73.2 MB)
 In order to play game the small addition to .Net named "Microsoft XNA Framework Redistributable 3.1" is required:
 http://www.microsoft.com/download/en/details.aspx?id=15163 (7.3 MB)
+
+# To start working with repos:
+1. install git for windows (default installation, your windows username should only contain latina characters)
+2. Start git bash shell
+3. Generate rsa key and change key settings in your github account
+http://help.github.com/win-set-up-git/
+4. cd to some directory
+ $ cd ~/Projects
+5. Clone the repos
+ $ git clone git@github.com:Ivajkin/Magica.git
+6. cd to Magica
+ $ cd Magica
+7. Change some files (you are our collaborator now, congrats!!)
+8. Commit changes to server (with some commit message!)
+ $ git commit -a -m "I just start working and I already feel great! I just hitted spacebar in some file and now commit that change"
+....
+x. Pretty easy, huh? )
